# tlw

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
benchmarks/: CMakeLists.txt  benchmark.h  classic.h  examples.h  impl.h  main.cpp
cmake/: FindLuaJIT.cmake  FindLuaJit.cmake  SLuaConfig.cmake.in  TLWConfig.cmake.in
include/slua/: api.hpp  class.h  function.hpp  getter.h  metatable.h  method.h  property.h  script.hpp  setter.h  stack.hpp  types.hpp  value.hpp  wrapper.h
include/tlw/: _lua.hpp  _table.h  _table.hpp  any.hpp  api.hpp  class.h  errors.hpp  function.hpp  meta_table.hpp  metatable.h  metatable.hpp  operators.hpp  prototype.hpp  ref.hpp  reference.hpp  stack.hpp  state.hpp  table.hpp  table_reference.hpp  tlw.hpp  type.hpp  types.hpp  user_def.hpp  util.h  util.hpp  wrapper.h  wrapping.hpp
include/tlw/detail/: cfunction_traits.hpp  ctor_traits.hpp  function_traits.hpp  method_traits.hpp  primitive_traits.hpp  property_traits.hpp  stack_traits.hpp  table_traits.hpp  type_traits.hpp  type_traits_test.hpp  user_ctor.hpp  user_method.hpp  user_prop.hpp  user_traits.hpp  util.hpp
include/tlw/old/: _errors.hpp  _metatable.hpp  _stack.hpp  _tlw.hpp  _types.hpp  _wrapping.hpp
include/tlw/types/: type_traits.h  types.h
scripts/: constructor.lua  custom_number.lua  destructor.lua  getter.lua  noop.lua  return_primitives.lua  setter.lua
src/: slua.cpp
test/: CMakeLists.txt  base_test.h  class.cpp  class_examples.h  class_wrappers.cpp  constr_example.h  constructor.cpp  constructor_test.cpp  destr_example.h  destructor.cpp  detail_test.h  examples.h  func_example.h  functional_wrappers.cpp  functions.cpp  getter.cpp  getter_example.h  high_end_examples.h  high_end_user_test.h  inspector_test.cpp  main.cpp  metatable.cpp  method.cpp  method_example.h  method_test.cpp  method_wrappers.cpp  move_value_test.cpp  new_types.cpp  number_example.h  operators.cpp  overloading.cpp  pretty_vs_classic.cpp  prop_example.h  property.cpp  property_test.cpp  script_example.h  scripts.cpp  setter.cpp  setter_example.h  signature_test.cpp  (+8 more)
test/detail/: detail_test.h  stack_test.cpp  type_traits_test.cpp
test/high_end/: any_test.cpp  high_end_examples.h  high_end_user_test.h  inner_property_as_value_test.cpp  inner_table_test.cpp  module.cpp  operators_test.cpp  overloaded_ctor_test.cpp  overloaded_methods_test.cpp  source_code_test.cpp  std_types_test.cpp  table_iterator_test.cpp  trivial_methods_test.cpp
test/include/: high_end_examples.h
test/lua/: setup.lua
test/old/: _stack.cpp  class_examples.h  class_wrappers.cpp  constr_example.h  destr_example.h  func_example.h  functional_wrappers.cpp  getter_example.h  method_example.h  method_wrappers.cpp  number_example.h  prop_example.h  script_example.h  test.h
test/scripts/: functions.lua  method.lua  noop.lua  number_overloading.lua  overloading.lua  plus.lua  property.lua  return_array.lua  return_table.lua  single_return.lua
test/user/: cfunction_test.cpp  constructor_test.cpp  move_value_test.cpp  property_test.cpp  user_test.h
